--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1> Created a webpage</h1>
 <p> It´s easy and fun</p>
 
-<body style="background-color:mediumblue;">
+<body style="background-color:blue;">
 
 <p style="background-color:lightgrey;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
 <img src="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
