--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 <title>My Web Page</title>
@@ -12,7 +12,7 @@
 
 <body style="background-color:blue;">
 
-<p style="background-color:lightgrey;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
+<p style="background-color:silver;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
 <img src="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 <a href="https://brickshelf.com/cgi-bin/gallery.cgi?m=LXF">Brickshelf</a>
 <br>
