--- a/page.html
+++ b/page.html
@@ -2,5 +2,7 @@
 <html lang="en">
 
 <head>
-<title>this is a second page test</title>
+<title>page 2</title>
 </head>
+  <p>OMG SECONDPAGE LMAOOOOOOOOOOOO</p>
+</html>
