--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 
 <head>
-<title>My Web Page</title>
+<title>evangelion.life</title>
 </head>
 
-<body>
+<body style="background-color:silver;">
 
-<h1> Created a webpage</h1>
-<p> It´s easy and fun</p>
+<h1 style="font-family:courier;"> Created a webpage</h1>
+<p style="font-family:courier;"> It´s easy and fun</p>
 
-<body style="background-color:blue;">
-
-<p style="background-color:silver;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
+<p style="font-family:courier;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
 <img src="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 <a href="https://brickshelf.com/cgi-bin/gallery.cgi?m=LXF">Brickshelf</a>
 <br>
