--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 <title>evangelion.life</title>
+<link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
 <body style="background-color:silver;">
 
-<h1 style="font-family:courier;"> Created a webpage</h1>
+<h1 style="font-family:courier new;"> Created a webpage</h1>
 <p style="font-family:courier;"> It´s easy and fun</p>
 
 <p style="font-family:courier;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
