--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <img src="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 <a href="https://brickshelf.com/cgi-bin/gallery.cgi?m=LXF">Brickshelf</a>
 <br>
+<script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
 </html>
