--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
 
 <body style="background-color:silver;">
 
-<h1 style="font-family:courier new;"> Created a webpage</h1>
-<p style="font-family:courier;"> It´s easy and fun</p>
-
-<p style="font-family:courier;"> I´m <font color="blue">blue</font> dabadee dabudei</p>
-<img src="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
-<a href="https://brickshelf.com/cgi-bin/gallery.cgi?m=LXF">Brickshelf</a>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0"?autoplay=1 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 <br>
 <script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
