--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 
 <head>
 <title>evangelion.life</title>
-<link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
+  <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
+    <meta http-equiv = "refresh" content = "3; url = https://www.youtube.com/embed/dQw4w9WgXcQ" />
 </head>
-
-<body style="background-color:silver;">
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0"?autoplay=1 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  
+<body> 
 <br>
 <script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
