--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>evangelion.life</title>
   <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
-    <meta http-equiv = "refresh" content = "3; url = https://www.youtube.com/embed/dQw4w9WgXcQ" />
+    <meta http-equiv = "refresh" content = "1; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </head>
 <body> 
 <br>
