--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>page 2</title>
+<title>Anime Figurine Collection</title>
 </head>
 <body>
   <p>OMG SECONDPAGE LMAOOOOOOOOOOOO</p>
