--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
 <title>evangelion.life</title>
-  <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
-    <meta http-equiv = "refresh" content = "1; url = https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
+<link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
-<body> 
-<br>
-<script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
+
+<body style="background-color:silver;">
+<p class="center">
+<img src="small_logo.gif" alt="syclone's webpage" class="title"><br>
+</p>
+
+<h2 style="font-family:courier new;"> Welcome to my webpage</h2>
+
 </body>
 </html>
