--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </p>
 
 <h2 style="font-family:courier new;"> Welcome to my webpage</h2>
-
+  
+<br>
+<script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
 </html>
