--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body style="background-color:silver;">
-<p class="center">
-<img src="small_logo.gif" alt="syclone's webpage" class="title"><br>
-</p>
+  <p class="center">
+    <img src="small_logo.gif" alt="syclone's webpage" class="title">
+    <br>
+  </p>
 
 <h2 style="font-family:courier new;"> Welcome to my webpage</h2>
   
