--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body style="background-color:silver;">
-  <p class="center">
+  <p class="middle">
     <img src="small_logo.gif" alt="syclone's webpage" class="title">
     <br>
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
