--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
-<body style="background-color:silver;">
-  <p class="middle">
-    <img src="small_logo.gif" alt="syclone's webpage" class="title">
+<body style="background-color:DeepSkyBlue;">
+  <p>
+    <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <br>
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
-
-
   
+ <table class="table_menu">
+  <tbody>
+    <tr>
+      <td id="title" colspan="3">Pages</td>
+    </tr>
+    <tr id="creations">
+      <td id="menu">
+        <a href="creations/index.htm">My brick creations</a>
+      </td>
+      <td>
+        "Update:13/07/2021"
+        <br>
+        "(My creations from LEGO and other brands of building blocks)
+        <br>
+      </td>
+    </tr>
+</table>
 
 <script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
