--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body style="background-color:DeepSkyBlue;">
+<center>
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
-    <br>
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
   
@@ -31,6 +31,7 @@
     </tr>
 </table>
 
+</center>
 <script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
 </body>
 </html>
