--- a/index.html
+++ b/index.html
@@ -19,16 +19,31 @@
       <td id="title" colspan="3">Pages</td>
     </tr>
     <tr id="creations">
-      <td id="menu">
-        <a href="creations/index.htm">My brick creations</a>
-      </td>
+      <td id="creations"></td>
+        <td id="menu">
+          <a href="creations/index.htm">My brick creations</a>
+        </td>
       <td>
-        "Update:13/07/2021"
+        Update:13/07/2021
         <br>
-        "(My creations from LEGO and other brands of building blocks)
+        (MOCs and WIPs from LEGO and other brands of building blocks)
         <br>
       </td>
     </tr>
+    
+    <tr id="figurines">
+      <td id="figurines"></td>
+        <td id="menu">
+          <a href="figurines/index.htm">My figurine collection</a>
+        </td>
+      <td>
+        Update:13/07/2021
+        <br>
+        (Anime/manga/game figurines)
+        <br>
+      </td>
+    </tr>    
+    
 </table>
 
 </center>
