--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 
 <body style="background-color:DeepSkyBlue;">
-<center>
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
@@ -46,7 +45,12 @@
     
 </table>
 
-</center>
-<script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script>
+
+
+  <table class="footer">
+<tr><td colspan=2 id="bar"></td></tr>
+<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> alt="visitor counter" class="footer_logo"></td><td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
+<tr><td colspan=2 id="bar"></td></tr>
+</table>
 </body>
 </html>
