--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+<link href="style.css" rel="stylesheet">
+<link href="top.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>evangelion.life</title>
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
