--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
-<body style="background-color:DeepSkyBlue;">
+<body>
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
