--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 
 <head>
-<link href="style.css" rel="stylesheet">
-<link href="top.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>evangelion.life</title>
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
 <body>
+<center>
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
   
- <table class="table_menu">
+ <table class="table_menu" border="1">
   <tbody>
     <tr>
       <td id="title" colspan="3">Pages</td>
@@ -49,11 +48,12 @@
 </table>
 
 
-
+</center>
   <table class="footer">
 <tr><td colspan=2 id="bar"></td></tr>
 <tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> alt="visitor counter" class="footer_logo"></td><td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
 <tr><td colspan=2 id="bar"></td></tr>
 </table>
+
 </body>
 </html>
