--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <td id="title" colspan="3">Pages</td>
     </tr>
     <tr id="creations">
-      <td id="creations"></td>
         <td id="menu">
           <a href="creations/index.htm">My brick creations</a>
         </td>
@@ -33,7 +32,6 @@
     </tr>
     
     <tr id="figurines">
-      <td id="figurines"></td>
         <td id="menu">
           <a href="figurines/index.htm">My figurine collection</a>
         </td>
@@ -51,7 +49,7 @@
 </center>
   <table class="footer">
 <tr><td colspan=2 id="bar"></td></tr>
-<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> alt="visitor counter" class="footer_logo"></td><td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
+<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
 <tr><td colspan=2 id="bar"></td></tr>
 </table>
 
