--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <td id="title" colspan="3">Pages</td>
     </tr>
     <tr id="creations">
+       <td id="menu">
           <a href="creations/index.htm">My brick creations</a>
         </td>
       <td>
@@ -33,6 +34,7 @@
     </tr>
     
     <tr id="figurines">
+       <td id="menu">
           <a href="figurines/index.htm">My figurine collection</a>
         </td>
       <td>
