--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
-<body>
-<center>
+<body class="center">
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
@@ -48,7 +47,7 @@
 </table>
 
 
-</center>
+
   <table class="footer">
 <tr><td colspan=2 id="bar"></td></tr>
 <tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
