--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <table class="table_menu" border="1">
   <tbody>
     <tr>
-      <td id="title" colspan="3">Pages</td>
+      <td id="title" colspan="3">Categories</td>
     </tr>
     <tr id="creations">
        <td id="menu">
