--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
   
- <table class="table_menu" border="1">
+ <table class="table_menu","center" border="1">
   <tbody>
     <tr>
       <td id="title" colspan="3">Categories</td>
