--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <link rel="shortcut icon" type="image/jpg" href="https://brickshelf.com/gallery/LXF/pc/starcruisermini.jpg">
 </head>
 
-<body class="center">
+<body>
+<center>
   <p>
     <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
@@ -54,5 +55,6 @@
 <tr><td colspan=2 id="bar"></td></tr>
 </table>
 
+</center>
 </body>
 </html>
