--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <center>
   <p>
-    <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <img src="meda/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
   
