--- a/figurines/index.htm
+++ b/figurines/index.htm
@@ -12,7 +12,7 @@
 <body>
 <center>
   <p>
-    <img src="small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <img src="media//small_logo.gif" alt="syclone's webpage" class="title" align="middle">
   </p>
   
 <br>
