--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 <center>
   <p>
-    <img src="media/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <a href="http://www.evangelion.life/">
+  <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
+ </a>
     <h3 style="font-family:courier new;"> Welcome to my webpage</h3>
   </p>
   
