--- a/creations/index.htm
+++ b/creations/index.htm
@@ -12,7 +12,9 @@
 <body>
 <center>
   <p>
-    <img src="..media/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <a href="http://www.evangelion.life/">
+      <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
+    </a>
   </p>
   
 <br>
