--- a/thanks/index.htm
+++ b/thanks/index.htm
@@ -23,6 +23,10 @@
     <h1 style="font-family:courier new;"> Thank You very much for your donation!</h1>
   </p>
 
-Click the image above to return to the homepage
+<br>
+  <img src="http://www.evangelion.life/media/i_love_you.gif" alt="I Love You gif" align="middle">
+<br>
+  
+Click the image on top of this page to return to the homepage
   
 <br>
