--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 </table>
 
 <br>
+
+You can help me by donating through the button below:
+
+<br>
   
 <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="AEPLRZJM8JBMU" />
