--- a/figurines/index.htm
+++ b/figurines/index.htm
@@ -12,7 +12,24 @@
 <body>
 <center>
   <p>
-    <img src="media//small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
   </p>
   
 <br>
+
+Welcome to the landing page of the collection of my figurines. Click the thumbnails or the character name to visit a dedicated page for each figurine with more photos, a small review and other stuff.
+<br>
+To see figures that I currently have for sale, visit the following page:
+
+
+<br>
+
+  <table>
+<tr><td colspan=2 id="bar"></td></tr>
+<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
+<tr><td colspan=2 id="bar"></td></tr>
+</table>
+
+</center>
+</body>
+</html>
