--- a/figurines/index.htm
+++ b/figurines/index.htm
@@ -12,7 +12,9 @@
 <body>
 <center>
   <p>
-    <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <a href="http://www.evangelion.life/">
+      <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
+    </a>
   </p>
   
 <br>
@@ -20,7 +22,9 @@
 Welcome to the landing page of the collection of my figurines. Click the thumbnails or the character name to visit a dedicated page for each figurine with more photos, a small review and other stuff.
 <br>
 To see figures that I currently have for sale, visit the following page:
-
+<a href="http://www.evangelion.life/figurines/for_sale">
+  <Figurines for sale>
+</a>
 
 <br>
 
