--- a/figurines/index.htm
+++ b/figurines/index.htm
@@ -19,7 +19,9 @@
   
 <br>
 
-Welcome to the landing page of the collection of my figurines. Click the thumbnails or the character name to visit a dedicated page for each figurine with more photos, a small review and other stuff.
+Welcome to the landing page of the collection of my figurines.
+<br>
+Click the thumbnails or the character name to visit a dedicated page for each figurine with more photos, a small review and other stuff.
 <br>
 To see figures that I currently have for sale, visit the following page:
 <a href="http://www.evangelion.life/figurines/for_sale">
