--- a/figurines/index.htm
+++ b/figurines/index.htm
@@ -25,7 +25,7 @@ Click the thumbnails or the character name to visit a dedicated page for each fi
 <br>
 To see figures that I currently have for sale, visit the following page:
 <a href="http://www.evangelion.life/figurines/for_sale">
-  <Figurines for sale>
+Figurines for sale
 </a>
 
 <br>
