--- a/creations/index.htm
+++ b/creations/index.htm
@@ -18,3 +18,13 @@
   </p>
   
 <br>
+  
+  <table>
+<tr><td colspan=2 id="bar"></td></tr>
+<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
+<tr><td colspan=2 id="bar"></td></tr>
+</table>
+
+</center>
+</body>
+</html>
