--- a/random/index.htm
+++ b/random/index.htm
@@ -12,7 +12,19 @@
 <body>
 <center>
   <p>
-    <img src="media/small_logo.gif" alt="syclone's webpage" class="title" align="middle">
+    <a href="http://www.evangelion.life/">
+      <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
+    </a>
   </p>
   
 <br>
+  
+  <table>
+<tr><td colspan=2 id="bar"></td></tr>
+<tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
+<tr><td colspan=2 id="bar"></td></tr>
+</table>
+
+</center>
+</body>
+</html>
