--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <td>
         Update:13/07/2021
         <br>
-        (Random stuff)
+        (Just random stuff)
         <br>
       </td>
     </tr>
@@ -87,25 +87,7 @@
     
     <tr id="random">
        <td id="menu">
-          <script type="text/javascript">
-
-var urls = new Array();
-urls[0] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[1] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[2] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[4] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[5] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[6] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[7] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[8] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[9] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[10] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-
-var random = Math.floor(Math.random()*urls.length);
-
-window.location = urls[random];
-
-</script>
+          <a href="https://www.evangelion.life/web_fun">Web fun</a>
         </td>
       <td>
         Update:13/07/2021
