--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
       </td>
     </tr>
     
-    <tr id="random">
+    <tr id="web_fun">
        <td id="menu">
           <a href="https://www.evangelion.life/web_fun">Web fun</a>
         </td>
       <td>
         Update:13/07/2021
         <br>
-        (This will send you to a random webpage)
+        (This will randomly send you to a fun/interesting webpage. Legend says you might end up finding something special.)
         <br>
       </td>
     </tr>
