--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
     <tr id="web_fun">
        <td id="menu">
-          <a href="https://www.evangelion.life/web_fun">Web fun</a>
+          <a href="web_fun/index.htm">Web fun</a>
         </td>
       <td>
         Update:13/07/2021
