--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
       <td>
         Update:13/07/2021
         <br>
-        (This will randomly send you to a fun/interesting webpage. Legend says you might end up finding something special.)
+        (This will randomly send you to a fun/interesting webpage.
+        Legend says you might end up finding something special.)
         <br>
       </td>
     </tr>
