--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <td>
         Update:13/07/2021
         <br>
-        (MOCs and WIPs from LEGO and other brands of building blocks)
+        (MOCs and WIPs from LEGO, reviews and related items)
         <br>
       </td>
     </tr>
