--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <td>
         Update:13/07/2021
         <br>
-        (MOCs and WIPs from LEGO, reviews and related items)
+        (MOCs, WIPs, reviews and everything related to LEGO)
         <br>
       </td>
     </tr>
