--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </tr>
     <tr id="creations">
        <td id="menu">
-          <a href="creations/index.htm">My brick creations</a>
+          <a href="creations/index.htm">Brick creations</a>
         </td>
       <td>
         Update:13/07/2021
@@ -39,7 +39,7 @@
     
     <tr id="figurines">
        <td id="menu">
-          <a href="figurines/index.htm">My figurine collection</a>
+          <a href="figurines/index.htm">Figurine collection</a>
         </td>
       <td>
         Update:13/07/2021
@@ -51,7 +51,7 @@
     
     <tr id="drawings">
        <td id="menu">
-          <a href="drawings/index.htm">My drawings</a>
+          <a href="drawings/index.htm">Drawings</a>
         </td>
       <td>
         Update:13/07/2021
