--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
       </td>
     </tr>
     
+    <tr id="twitter">
+       <td id="menu">
+          <a href="https://www.twitter.com/captain_syclone">Twitter</a>
+        </td>
+      <td>
+        Update:13/07/2021
+        <br>
+        (Perhaps can catch me there...)
+        <br>
+      </td>
+    </tr>
+    
     <tr id="web_fun">
        <td id="menu">
           <a href="web_fun/index.htm">Web fun</a>
