--- a/web_fun/index.htm
+++ b/web_fun/index.htm
@@ -2,16 +2,21 @@
 <script type="text/javascript">
 
 var urls = new Array();
-urls[0] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[1] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[2] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[4] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[5] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[6] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[7] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[8] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[9] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
-urls[10] = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+urls[0] = "https://www3.nhk.or.jp/nhkworld/";
+urls[1] = "https://www.fantasynamegenerators.com/";
+urls[2] = "http://mirror.uncyc.org/wiki/Main_Page";
+urls[4] = "https://en.uncyclopedia.co/wiki/Main_Page";
+urls[5] = "https://www.youtube.com/watch?v=rp8hvyjZWHs";
+urls[6] = "https://www.fmylife.com/";
+urls[7] = "https://archive.org/index.php";
+urls[8] = "http://www.pangloss.com/seidel/Shaker/";
+urls[9] = "https://www.wordspy.com/";
+urls[10] = "https://puttingweirdthingsincoffee.com/";
+urls[11] = "https://www.liveplasma.com/";
+urls[12] = "https://www.cracked.com/";
+urls[13] = "https://juliasmexicocity.typepad.com/safetygraphics/";
+
+
 
 var random = Math.floor(Math.random()*urls.length);
 
