--- a/web_fun/index.htm
+++ b/web_fun/index.htm
@@ -15,8 +15,9 @@ urls[10] = "https://puttingweirdthingsincoffee.com/";
 urls[11] = "https://www.liveplasma.com/";
 urls[12] = "https://www.cracked.com/";
 urls[13] = "https://juliasmexicocity.typepad.com/safetygraphics/";
-
-
+urls[14] = "https://www.omegle.com/";
+urls[15] = "https://failblog.cheezburger.com/";
+urls[16] = "https://www.fark.com/];
 
 var random = Math.floor(Math.random()*urls.length);
 
