--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     
     <tr id="web_fun">
        <td id="menu">
-          <a href="web_fun/index.htm">Web fun</a>
+          <a href="web_fun/index.htm" target="_blank" rel="noopener noreferrer">Web fun</a>
         </td>
       <td>
         Update:15/07/2021
