--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
     <tr id="youtube">
        <td id="menu">
-          <a href="https://www.youtube.com/syclone">YouTube</a>
+          <a href="https://www.youtube.com/syclone" target="_blank" rel="noopener noreferrer">YouTube</a>
         </td>
       <td>
         Update:13/07/2021
@@ -87,7 +87,7 @@
     
     <tr id="twitter">
        <td id="menu">
-          <a href="https://www.twitter.com/captain_syclone">Twitter</a>
+          <a href="https://www.twitter.com/captain_syclone" target="_blank" rel="noopener noreferrer">Twitter</a>
         </td>
       <td>
         Update:13/07/2021
