--- a/web_fun/index.htm
+++ b/web_fun/index.htm
@@ -18,6 +18,13 @@ urls[13] = "https://juliasmexicocity.typepad.com/safetygraphics/";
 urls[14] = "https://www.omegle.com/";
 urls[15] = "https://failblog.cheezburger.com/";
 urls[16] = "https://www.fark.com/];
+urls[17] = "http://www.passiveaggressivenotes.com/";
+urls[18] = "https://awkwardfamilyphotos.com/";
+urls[19] = "http://www.textsfromlastnight.com/";
+urls[20] = "https://postsecret.com/";
+urls[21] = "http://www.everypoet.com/haiku/default.htm";
+urls[22] = "https://homestarrunner.com/";
+
 
 var random = Math.floor(Math.random()*urls.length);
 
