--- a/web_fun/index.htm
+++ b/web_fun/index.htm
@@ -1,5 +1,5 @@
 
-<script type="text/javascript">
+<SCRIPT LANGUAGE="JAVASCRIPT">
 
 var urls = new Array();
 urls[0] = "https://www3.nhk.or.jp/nhkworld/";
