--- a/creations/index.htm
+++ b/creations/index.htm
@@ -19,6 +19,35 @@
   
 <br>
   
+   <table class="table_menu" border="1">
+  <tbody>
+    <tr>
+      <td id="title" colspan="3">Categories</td>
+    </tr>
+    <tr id="mocs">
+       <td id="menu">
+          <a href="creations/mocs/index.htm">MOCs</a>
+        </td>
+      <td>
+        Update:28/07/2021
+        <br>
+        (Finished models)
+        <br>
+      </td>
+    </tr>
+    <tr id="wips">
+       <td id="menu">
+          <a href="creations/wips/index.htm">WIPs</a>
+        </td>
+      <td>
+        Update:28/07/2021
+        <br>
+        (Work-In-Progress)
+        <br>
+      </td>
+    </tr>
+    </table>
+  
   <table>
 <tr><td colspan=2 id="bar"></td></tr>
 <tr><td><script type="text/javascript" src="//counter.websiteout.net/js/35/0/0/1"></script> </td> <td align=right valign=bottom><span class="br_text">Copyright (C) 2020-2021</span> <span class="br_text">syclone</span></td></tr>
