--- a/creations/wips/index.htm
+++ b/creations/wips/index.htm
@@ -13,11 +13,32 @@
 <center>
   <p>
     <a href="http://www.evangelion.life/">
-      <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/cc/Nissan_300ZX_front_20080408.jpg" height="363" width="640" alt="syclone's webpage" align="middle">
     </a>
   </p>
   
 <br>
+  
+   <table class="table_menu" border="1">
+  <tbody>
+    <tr>
+      <td id="title" colspan="3">Work-In-Progress models</td>
+    </tr>
+    <tr id="nissanz32">
+      <td>
+       <img src="http://www.evangelion.life/media/small_logo.gif" alt="Nissan Fairlady z32"> 
+      </td>
+       <td id="menu">
+          <a href="creations/mocs/nissanz32/index.htm">Nissan Fairlady z32</a>
+        </td>
+      <td>
+        Update:28/07/2021
+        <br>
+        (Nissan Fairlady Z in 1:8 scale)
+        <br>
+      </td>
+    </tr>
+  </table>
   
   <table>
 <tr><td colspan=2 id="bar"></td></tr>
