--- a/creations/index.htm
+++ b/creations/index.htm
@@ -26,7 +26,7 @@
     </tr>
     <tr id="mocs">
        <td id="menu">
-          <a href="creations/mocs/index.htm">MOCs</a>
+          <a href="mocs/index.htm">MOCs</a>
         </td>
       <td>
         Update:28/07/2021
@@ -37,7 +37,7 @@
     </tr>
     <tr id="wips">
        <td id="menu">
-          <a href="creations/wips/index.htm">WIPs</a>
+          <a href="wips/index.htm">WIPs</a>
         </td>
       <td>
         Update:28/07/2021
