--- a/creations/wips/index.htm
+++ b/creations/wips/index.htm
@@ -29,7 +29,7 @@
        <img src="http://www.evangelion.life/media/small_logo.gif" alt="Nissan Fairlady z32"> 
       </td>
        <td id="menu">
-          <a href="creations/mocs/nissanz32/index.htm">Nissan Fairlady z32</a>
+          <a href="nissanz32/index.htm">Nissan Fairlady z32</a>
         </td>
       <td>
         Update:28/07/2021
