--- a/creations/wips/index.htm
+++ b/creations/wips/index.htm
@@ -13,7 +13,7 @@
 <center>
   <p>
     <a href="http://www.evangelion.life/">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/c/cc/Nissan_300ZX_front_20080408.jpg" height="363" width="640" alt="syclone's webpage" align="middle">
+       <img src="http://www.evangelion.life/media/small_logo.gif" alt="syclone's webpage" align="middle">
     </a>
   </p>
   
@@ -26,7 +26,7 @@
     </tr>
     <tr id="nissanz32">
       <td>
-       <img src="http://www.evangelion.life/media/small_logo.gif" alt="Nissan Fairlady z32"> 
+       <img src="https://upload.wikimedia.org/wikipedia/commons/c/cc/Nissan_300ZX_front_20080408.jpg" height="363" width="640" alt="Nissan Fairlady z32"> 
       </td>
        <td id="menu">
           <a href="nissanz32/index.htm">Nissan Fairlady z32</a>
